# mini-app-chat

./: README.md  pyproject.toml
api/: app.py
api/v1/chats/: views.py
infra/: docker-compose.yaml
src/: main.py  models.py  session.py  settings.py  views.py  websocket_views.py
src/api/: app.py
src/api/v1/chats/: views.py
src/chats/: models.py
src/db/: base.py  session.py
src/users/: models.py
